--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <h1> Tic_Tac_Toe </h1>
-    
+    <button id="toggleButton" class="toggle-btn">Dark Mode</button>
     <h3 id="turn"></h3>
     <div class="main">
         <div class="container">
